# Face-detector-ROS2

./: .gitignore  LICENSE  README.md  start.sh
ros2/src/bounding_box/: CMakeLists.txt  package.xml
ros2/src/bounding_box/include/bounding_box/: bounding_box.hpp
ros2/src/bounding_box/launch/: bounding_box.launch.py
ros2/src/bounding_box/src/: bounding_box_node.cpp
ros2/src/cam_reader/: CMakeLists.txt  package.xml
ros2/src/cam_reader/include/cam_reader/: cam_reader.hpp
ros2/src/cam_reader/launch/: cam_reader.launch.py
ros2/src/cam_reader/src/: cam_reader_node.cpp
ros2/src/face_detector/: CMakeLists.txt  package.xml
ros2/src/face_detector/include/face_detector/: face_detector.hpp
ros2/src/face_detector/launch/: face_detector.launch.py  main.launch.py
ros2/src/face_detector/src/: face_detector_node.cpp
ros2/src/usr_msgs/: CMakeLists.txt  package.xml
ros2/src/usr_msgs/launch/: main.launch.py
ros2/src/usr_msgs/msg/: Box.msg  Boxes.msg  FaceDetection.msg
