<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cam_reader</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ariasfaleja@gmail.com">aleja</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>  <!-- add c++ library for ros2 -->
  <depend>OpenCV</depend>  <!-- We add all what we need for this node -->
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
